test/errors/identifiers_error/zs/prefix_zserio/subtype_name_error.zs
package prefix_zserio.subtype_name_error;

subtype uint32 SubZserioUInt32;

subtype string ZserioString; // zserio prefix!
